<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                style="@style/questionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    style="@style/editTextStyle"
                    android:hint="type your name here please" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/questionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1" />


                <RadioGroup
                    android:id="@+id/Q1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/apple"
                        style="@style/answersStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option1Q1" />

                    <RadioButton
                        android:id="@+id/samsung"
                        style="@style/answersStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option2Q1" />

                    <RadioButton
                        android:id="@+id/google"
                        style="@style/answersStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option3Q1" />


                </RadioGroup>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/questionStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2" />

                <RadioGroup
                    android:id="@+id/q2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/_2002"
                        style="@style/answersStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option1Q2" />

                    <RadioButton
                        android:id="@+id/_2007"
                        style="@style/answersStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option2Q2" />

                    <RadioButton
                        android:id="@+id/_2004"
                        style="@style/answersStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option3Q2" />

                </RadioGroup>
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/questionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/gmail"
                style="@style/answersStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gmail" />

            <RadioButton
                android:id="@+id/yahoo"
                style="@style/answersStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yahoomail" />

            <RadioButton
                android:id="@+id/hotmail"
                style="@style/answersStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotmail" />

        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/questionStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/appleLocated"
                style="@style/answersStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apple" />

            <CheckBox
                android:id="@+id/samsungLocated"
                style="@style/answersStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/samsung" />


            <CheckBox
                android:id="@+id/googleLocated"
                style="@style/answersStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google" />

            <CheckBox
                android:id="@+id/alibabaLocated"
                style="@style/answersStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alibaba" />
        </LinearLayout>

        <TextView
            style="@style/questionStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5" />

        <EditText
            android:id="@+id/q5EditText"
            style="@style/Q5EditTextStyle" />


        <Button
            android:id="@+id/submit"
            style="@style/buttonStyle"
            android:onClick="result"
            android:text="@string/submitButton" />


    </LinearLayout>


</ScrollView>
